--- a/carts.pug
+++ b/carts.pug
@@ -44,7 +44,7 @@ block content
                         a.e-input-number__btn(href='') +
                   .col-xl-3
                     .m-cart__footer
-                      p.m-cart__text
+                      p.m-cart__price
                         | NT$ 666
                       a.m-cart__link.d-none.d-xl-flex(href='')
                         i.material-icons
