--- a/checkout-3.pug
+++ b/checkout-3.pug
@@ -30,7 +30,7 @@ block content
                     input#paper-invoice(type='radio', name='invoice', value='paper-invoice')
                     label.mform__radio(for='paper-invoice') 郵寄發票
                 .col-12#electronic-invoice-email.mb-1
-                  label.m-form__label(for='invoice-email') 電子郵件信箱
+                  label.m-form__label.mb-s1(for='invoice-email') 電子郵件信箱
                   input#invoice-email.m-form__control(type='email', name='invoice-email', placeholder='example@email.com')
                 #paper-invoice-address.row.h-gutter-s1.mb-1
                   .col-6
