--- a/login.pug
+++ b/login.pug
@@ -11,11 +11,11 @@ block content
           .p-login__community
             h3.p-login__title.d-none.d-xl-inline-block
               | 連結社群帳號
-            a.e-btn.p-login__e-btn
+            a.e-btn.e-btn_p-login
               img.e-image(width='108', src='img/icon/facebook.svg', alt='')
-            a.e-btn.p-login__e-btn 
+            a.e-btn.e-btn_p-login
               img.e-image(width='94', src='img/icon/google.svg', alt='')
-            a.e-btn.p-login__e-btn 
+            a.e-btn.e-btn_p-login
               img.e-image(width='97', src='img/icon/yahoo.svg', alt='')
         .col-12.col-xl-5
           form.m-form(action='')
