--- a/style/all.css
+++ b/style/all.css
@@ -4817,6 +4817,13 @@ html {
   width: 18.75rem;
 }
 
+.e-btn_p-login {
+  border: 0.0625rem solid #eaf0ed;
+  height: 3.5rem;
+  padding: 1rem;
+  background-color: white;
+}
+
 .e-backtop-btn {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
@@ -6048,13 +6055,6 @@ input[type='checkbox']:checked + label .e-favorite__unlike {
             justify-content: space-between;
     height: 100%;
   }
-}
-
-.p-login__e-btn {
-  border: 0.0625rem solid #eaf0ed;
-  height: 3.5rem;
-  padding: 1rem;
-  background-color: white;
 }
 
 .p-checkout-success {
