--- a/sass/pages/_index.scss
+++ b/sass/pages/_index.scss
@@ -12,12 +12,11 @@ $story__img-min-height: pxTorem(250px);
   &__text {
     color: $secondary;
     > p {
-      margin-bottom: 1em;
       line-height: 2;
       letter-spacing: 0;
     }
     p + p {
-      margin-bottom: 0;
+      margin-top: 1em;
     }
 
     @include media-breakpoint-up(xl) {
@@ -25,11 +24,11 @@ $story__img-min-height: pxTorem(250px);
       text-align: left;
       writing-mode: vertical-rl;
       > p {
-        margin-left: 2em;
         line-height: 2.5;
       }
       p + p {
-        margin-left: 0;
+        margin-top: 0;
+        margin-right: 2em;
       }
     }
   }
